--- a/public/index.html
+++ b/public/index.html
@@ -45,13 +45,13 @@
     h4 {
         font-family: chunk,serif;
         color: #ffffff;
-        font-size: 40px;
+        font-size: 30px;
         font-weight: normal;
     }
     h5 {
         font-family: chunk,serif;
         color: #ffffff;
-        font-size: 30px;
+        font-size: 10px;
         font-weight: normal;
     }
     .stransparent {
@@ -80,9 +80,11 @@
         <div class="stransparent"><h3>Stop with the fucking Christmas music already.</h3></div>
 
 
-        <h5>JingleFree.org</h5>
-
-
+        <h4>JingleFree.org</h4>
+        
+        <h5>Sorry about this, from <a href="http://warwickp.com">the author</a></h5>
+        
+        <h5>Background image by <a href="http://www.flickr.com/photos/macalicious/2094567877/sizes/o/in/photostream/">George Deputee</a></h5>
     </div>
 
 <script type="text/javascript">
